# pqc

./: .gitignore  AGENTS.md  README.md  pyproject.toml
Formula/: pqc.rb
src/pqc/: __main__.py  agent.py  algorithms.py  cli.py  scanner.py
src/pqc/protocols/: ike.py  ssh.py  tls.py
tests/: test_pqc.py
